--- a/app/page.css
+++ b/app/page.css
@@ -18,8 +18,9 @@
 .headline {
   display: inline-flex;
   font-size: 3.125rem;
-  font-size: min(4.375rem, max(8vw, 2.5rem));
-  font-weight: 700;
+  font-size: min(3.375rem, max(8vw, 2.5rem));
+  font-family: Aeonik, sans-serif;
+  font-weight: 600;
   font-feature-settings: initial;
   letter-spacing: -0.12rem;
   margin-left: -0.2rem;
